--- a/src/components/TransactionPanel/TransactionPanel.css
+++ b/src/components/TransactionPanel/TransactionPanel.css
@@ -11,9 +11,9 @@
 
   @media (--viewportLarge) {
     flex-direction: row;
-    max-width: 1156px; /* 1060 + (paddingLeft + paddingRight) */
+    max-width: 1056px;
     margin: 0 auto 57px auto;
-    padding: 0 48px;
+    padding: 0 24px;
   }
 }
 
