--- a/src/containers/LandingPage/LandingPage.css
+++ b/src/containers/LandingPage/LandingPage.css
@@ -89,9 +89,9 @@
   }
 
   @media (--viewportLarge) {
-    max-width: calc(1052px + 36px + 36px);
+    max-width: 1056px;
+    padding: 0 24px 0 24px;
     margin: var(--LandingPage_sectionMarginTopLarge) auto 93px auto;
-    padding: 0 36px 0 36px;
   }
 }
 
